# AU

./: README.md  data.csv  pyproject.toml
api/: forms.py  urls.py  views.py
api/templates/api/: base.html  comparemon.html  dashboard.html  homepage.html  index.html  index1.html  login.html  register.html
config/: settings.py  urls.py
templates/nutritionAssistance/: base.html  calorie.html  homepage.html  index.html  login.html  register.html
test/: label_encoder.pkl  tests.py  xgb_model.pkl
